--- a/TOTO Track/www/index.html
+++ b/TOTO Track/www/index.html
@@ -2,14 +2,18 @@
 <html lang="en" ng-app="totoTrackApp">
 <head>
     <meta charset="UTF-8">
+    <script src="appConfig.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-route.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
-    <script src="http://jcrop-cdn.tapmodo.com/v2.0.0-RC1/js/Jcrop.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="http://jcrop-cdn.tapmodo.com/v2.0.0-RC1/css/Jcrop.css" type="text/css">
     <script src="modules.js"></script>
     <script src="routes.js"></script>
-    <script src="homePage/script.js"></script>
+    <script src="pages/homePage/script.js"></script>
+    <script src="pages/login/login.js"></script>
     <title>Toto Track</title>
 </head>
 <body>
